# Totoro

./: README.md  TASK.txt  Z-Image With _Lora Support.ipynb  pyproject.toml
tests/: README.md  conftest.py  test_gadget.py  test_parser.py  test_synthesizer.py
totoro/: __init__.py  cli.py  engine.py  gadget.py  parser.py  synthesizer.py
totoro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
