[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "totoro"
version = "0.1.0"
description = "Totoro - Semantic ROP Chain Synthesizer"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Totoro Team"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "capstone>=5.0.0",
    "z3-solver>=4.12.0",
]

[project.optional-dependencies]
pwntools = [
    "pwntools>=4.11.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
totoro = "totoro.cli:main"

[project.urls]
Homepage = "https://github.com/totoro-project/totoro"
Repository = "https://github.com/totoro-project/totoro"

[tool.setuptools.packages.find]
where = ["."]
include = ["totoro*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
